opam-version: "2.0"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/irmin-remote"
doc: "https://zshipko.github.io/irmin-remote/doc"
license: "ISC"
dev-repo: "git+https://github.com/zshipko/irmin-remote.git"
bug-reports: "https://github.com/zshipko/irmin-remote/issues"
tags: []

depends:
[
    "ocaml" {>= "4.05.0"}
    "dune" {build}
    "irmin"
    "irmin-mem"
]

depopts: []

build:
[
    ["dune" "build" "-p" name "-j" jobs]
]

synopsis: """
Remote object storage using Irmin
"""
